syntax= "proto3";

package com.distributedchat.grpc;

option java_multiple_files= true;
option java_package= "com.distributedchat.chatservice.component";

service UserService{
	rpc VerifyUserExists(UserIdRequest) returns (UserExistsResponse);
	rpc GetUserDetails(UserIdRequest) returns (UserDetails);
	rpc GetUsersDetailList(UsersIdList) returns (UsersListWrapper);
}

message UserIdRequest{
	string user_id= 1;
}

message UserExistsResponse{
	bool exists= 1;
}

message UserDetails{
	string username= 1;
	string photo= 2;
	string phone= 3;
}

message UsersIdList{
	repeated string user_id=1;
}

message UserInfo{
	string user_id= 1;
	string username= 2;
	string photo= 3;
	string phone= 4;
}

message UsersListWrapper{
	repeated UserInfo users=1;
}